--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ pandas~=2.2.3
 matplotlib~=3.9.2
 circlify~=0.15.0
 beautifulsoup4~=4.12.3
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz
+numpy~=2.1.3
